@@ -2,6 +2,10 @@ configurations {
     ktlint
 }
 
+dependencies {
+    ktlint "com.pinterest:ktlint:${versions.ktlint}"
+}
+
 task ktlint(type: JavaExec, group: "verification") {
     description = "Check Kotlin code style."
     mainClass = "com.pinterest.ktlint.Main"
@@ -14,4 +18,5 @@ task ktlintFormat(type: JavaExec, group: "formatting") {
     mainClass = "com.pinterest.ktlint.Main"
     classpath = configurations.ktlint
     args "-F", "src/**/*.kt"
+    jvmArgs("--add-opens", "java.base/java.lang=ALL-UNNAMED")
 }
